completa crud de transacoes e atualiza documentacao do readme
