# src/routes/transaction.routes.js
@@ -2,7 +2,9 @@ const express = require('express');
 const router = express.Router();
 const transactionController = require('../controllers/transaction.controller');
 
+router.get('/', transactionController.getAll);
 router.post('/', transactionController.create);
-router.get('/', transactionController.getByWallet);
+router.put('/:id', transactionController.update);
+router.delete('/:id', transactionController.remove);
 
 module.exports = router;
